fix: wrap listing item inside semantion List component, add List.Header for listing item title and document breaking change

--- a/theme/themes/pastanaga/extras/main.less
+++ b/theme/themes/pastanaga/extras/main.less
@@ -645,12 +645,10 @@ body.has-toolbar-collapsed .mobile-menu {
   transition: transform 0.5s cubic-bezier(0.09, 0.11, 0.24, 0.91);
 }
 
-.listing-item-ul {
-  padding: 0;
-  margin: 0;
-  font-size: 1.3em;
-  font-weight: 500;
-  list-style: none;
+.summary-listing-item-header {
+  color: #007eb1 !important;
+  font-size: 1.25em;
+  font-weight: 500 !important;
 }
 
 // Deprecated as per https://github.com/plone/volto/issues/1265
